@@ -1,3 +1,10 @@
+Thu May 27 22:39:23 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_read): call ReadFile() with len = 0 before
+	  reading really on console, because the first ReadFile() call after
+	  PeekConsoleInput() always returns broken data. (Windows's bug).
+	  [ruby-core:29018]
+
 Wed May 26 20:19:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* random.c (random_rand): add the result of random to the
